gradle compile working